--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.6
-  shadcn_ui: ^0.39.3
+  shadcn_flutter: ^0.0.47
+  shadcn_ui: ^0.43.0
 
 dev_dependencies:
   flutter_test:
