--- a/.github/workflows/android-dev.yaml
+++ b/.github/workflows/android-dev.yaml
@@ -8,22 +8,29 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: Checkout
         uses: actions/checkout@v6
 
       - name: Setup JDK
         uses: actions/setup-java@v5
         with:
-          distribution: 'zulu'
-          java-version: '21'
-      
+          distribution: "zulu"
+          java-version: "21"
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
           flutter-version: 3.35.4
-      
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+
       - name: Install dependencies
         run: flutter pub get
 
